# seat-connect

./: LICENSE  README.md  hacs.json  pyproject.toml
custom_components/seat_connect/: __init__.py  api.py  application_credentials.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  lock.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/seat_connect/translations/: de.json  en.json
tests/components/seat_connect/: conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_services.py
