[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-seat-connect"
version = "0.1.0"
description = "Home Assistant custom component for SEAT Connect"
authors = [{name = "Seat Connect Community"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "async-timeout>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "homeassistant>=2024.4.0",
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-homeassistant-custom-component>=0.13.89",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "types-aiohttp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "SIM", "PL", "I001"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "custom_components"

[tool.coverage.run]
source = ["custom_components"]
branch = true
